# chrome_offline_game

./: Cargo.toml  README.md
python_game/: environment.yml  main.py
ressources/funny_brain/: brain1100.json  over_fitting.json
ressources/funny_brain/old/: brain1100.json  brain2999.json  over_fitting2.json
ressources/funny_brain/v1_bend/: brain0.json  brain100.json  brain1000.json  brain10000.json  brain100000.json  brain100100.json  brain100200.json  brain100300.json  brain100400.json  brain100500.json  brain100600.json  brain100700.json  brain100800.json  brain100900.json  brain10100.json  brain101000.json  brain101100.json  brain101200.json  brain101300.json  brain101400.json  brain101500.json  brain101600.json  brain101700.json  brain101800.json  brain101900.json  brain10200.json  brain102000.json  brain102100.json  brain102200.json  brain102300.json  brain102400.json  brain102500.json  brain102600.json  brain102700.json  brain102800.json  brain102900.json  brain10300.json  brain103000.json  brain103100.json  brain103200.json  (+1064 more)
src/: main.rs
src/brain/: mod.rs
src/entity/: mod.rs
src/game/: mod.rs
src/neurone/: mod.rs
src/params/: mod.rs
src/program_args/: mod.rs
src/utils/: mod.rs
