[package]
name = "chrome_offline_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced =  { version = "0.9", default-features = false, features = ["canvas", "glow"] }
rand = "0.8"
rand_chacha = "0.3"
